--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 
 # Compiled output
 /dist
+/app-dist
 /tmp
 /out-tsc
 /bazel-out
@@ -40,3 +41,7 @@ testem.log
 # System files
 .DS_Store
 Thumbs.db
+
+
+app-dist.zip
+nginx copy.conf
