--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/ssr": "^17.1.0",
     "express": "^4.18.2",
     "marked": "^9.0.0",
+    "ngx-live2d": "^1.0.0",
     "ngx-markdown": "^17.1.1",
     "prismjs": "^1.28.0",
     "rxjs": "~7.8.0",
